// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Account -> Get 1`] = `
Object {
  "email": "general_test@example.com",
  "emailVerified": true,
  "firstName": "General",
  "id": 1,
  "lastName": "Test",
}
`;

exports[`Account -> Update email address 1`] = `
Object {
  "feedback": Object {
    "email": Array [
      "A valid email is required.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Account -> Update email address 2`] = `
Object {
  "email": "changed_email_test@example.com",
  "emailVerified": true,
  "firstName": "Changed Email",
  "id": 10,
  "lastName": "Testini",
}
`;

exports[`Account -> Update password 1`] = `
Object {
  "feedback": Object {
    "newPassword": Array [
      "A valid new password is required.",
      "Add another word or two. Uncommon words are better.",
    ],
  },
  "message": "Validation Error",
}
`;

exports[`Account -> Update password 2`] = `
Object {
  "message": "Incorrect email or password",
}
`;

exports[`Account -> Update password 3`] = `
Object {
  "email": "change_password_test@example.com",
  "emailVerified": true,
  "firstName": "Change Password",
  "id": 8,
  "lastName": "Test",
}
`;

exports[`Account -> Update read-only data 1`] = `
Object {
  "createdAt": Any<Date>,
  "email": "read_only_test@example.com",
  "emailVerified": true,
  "enabled": true,
  "firstName": "Read Only",
  "id": 9,
  "lastName": "Test",
  "password": Any<String>,
  "updatedAt": Any<Date>,
}
`;
